<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.statistics.StatisticsFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/kitty"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_00_21"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/maggy"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_09"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/swen"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_12"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/you"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView16"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView16" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_10"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView16"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView16" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/fffff"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView17" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_14"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView17" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView17" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/mirror"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView18"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_16"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView18"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView18" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/flay"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView19"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_18"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView19"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/bang"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView20" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_20"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView20" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView23" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/qwerty"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView22"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView22" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_24"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView22"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView22" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/icon_background_card_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView20" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/flaffy"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView22"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView23" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_01_22"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView22"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView23" />

        <ImageView
            android:id="@+id/btnBackStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:src="@drawable/icon_text_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/piggy"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/_00_34"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>